FN-39-dataset-name: Added support for dataset endpoint to use the name alternatively to the id. Updated tests. Updated swagger docs
